# zino-svn-to-git

trunk/: CMakeLists.txt  Doxyfile  README.txt  build.bat  build.mac.sh  settings.pro  zino.pro
trunk/i18n/: zino_PTbr.ts  zino_ZA.ts
trunk/mac/: CMakeLists.txt  Info.plist
trunk/mac/Resources/: CMakeLists.txt  zino.icns
trunk/src/: CMakeLists.txt  Info.plist  aboutzino.cpp  aboutzino.h  aboutzinobase.ui  firstrun.cpp  firstrun.h  firstrunbase.ui  main.cpp  questionwidget.cpp  questionwidget.h  questionwidgetbase.ui  runmoc.sh  sources.pro  src.pro  zino.cpp  zino.h  zinobase.ui  zinoresource.rc
trunk/src/resources/: LICENSE.txt  mac_bundle_background.xcf  resources.qrc  zino.sql  zino_logo.xcf  zinomaster.db
trunk/src/zino.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak  timsutton.mode1  timsutton.pbxuser
trunk/win/: zino.nsi
wiki/: FrontPage.wiki
